--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,36 +1,34 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>Edición Usuario</title>
 </head>
 <body>
 <h1>Editar User</h1>
-    <h2>ID: <%= comentario.id %></h2>
-    <form action="<%= BaseURL %>/users/<%=  %>?_method=PATCH" method="POST">
+    <h2>ID: <%= datosUsuario.idUser %></h2>
+    <form action="<%= BaseURL %>users/<%= datosUsuario.idUser %>?_method=PATCH" method="POST">
+        <label for="nif">NIF</label>
+        <input type="text" name="nif" value="<%= datosUsuario.nif %>" required readonly><br>
         
-        </select>
-        <br>
-        <label></label>
-        <br>
-        <textarea name="opinion" cols="30" rows="5" required>
-            <%=  %>
-        </textarea>
-        <br>
-        <br>
-        <button>Guardar</button>      
-        <a href="<%= BaseURL %>/">Cancelar</a>
-    </form>    
-=======
-    <title>Edit User</title>
-</head>
-<body>
-    <% console.log(datosUsuario) %>
->>>>>>> PlaciDev
+        <label for="username">Username</label>
+        <input type="text" name="username" value="<%= datosUsuario.username %>" required><br>
+        
+        <label for="firstName">First Name</label>
+        <input type="text" name="firstName" value="<%= datosUsuario.firstName %>" required><br>
+        
+        <label for="lastName">Last Name</label>
+        <input type="text" name="lastName" value="<%= datosUsuario.lastName %>" required><br>
+        
+        <label for="email">Email</label>
+        <input type="email" name="email" value="<%= datosUsuario.email %>" required><br>
+        
+        <label>Profile: <%= datosUsuario.profile %></label>
+        
+        <br><br>
+        <button type="submit">Guardar</button>
+        <a href="<%= BaseURL %>users">Cancelar</a>
+    </form>
 </body>
 </html>
-=======
->>>>>>> angeldev
