--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -6,27 +6,35 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
+    <h1>Crear Nuevo Usuario</h1>
+    <form action="<%= BaseURL %>users" method="POST">
         <label for="nif">NIF</label>
-        <input type="text" required><br>
+        <input type="text" name="nif" required><br>
+        
         <label for="username">Username</label>
-        <input type="text" required><br>
+        <input type="text" name="username" required><br>
+        
         <label for="password">Password</label>
-        <input type="password" required><br>
-        <label for="firstname">First Name</label>
-        <input type="text" required><br>
-        <label for="lastname">Last Name</label>
-        <input type="text" required><br>
+        <input type="password" name="password" required><br>
+        
+        <label for="firstName">First Name</label>
+        <input type="text" name="firstName" required><br>
+        
+        <label for="lastName">Last Name</label>
+        <input type="text" name="lastName" required><br>
+        
         <label for="email">Email</label>
-        <input type="text" required><br>
-        <label for="picture">Picture</label>
-        <input type="text"><br>
+        <input type="email" name="email" required><br>
+        
         <label for="profile">Profile</label>
         <select name="profile" id="profile">
             <option value="administrador">Administrador</option>
             <option value="profesor">Profesor</option>
             <option value="alumno">Alumno</option>
         </select>
+        <br><br>
+        <button type="submit">Crear Usuario</button>
+        <a href="<%= BaseURL %>users">Cancelar</a>
     </form>
 </body>
 </html>
