se ha terminado edit.ejs y delete de company

--- a/views/company/edit.ejs
+++ b/views/company/edit.ejs
@@ -4,37 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%=datosCompany.name%> - Editar</title>
+    <style>
+        fieldset{
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+        }
+    </style>
 </head>
 <body>
-    <form action="<%= BaseURL %>company">
+    <form action="<%= BaseURL %>company/<%= datosCompany._id %>?_method=PATCH" method="POST">
         <fieldset>
             <legend><h2><%= datosCompany.name %></h2></legend>
 
             <h3>DATOS GENERALES</h3>
             <label for="type">Tipo de empresa: </label>
-            <input type="text" name="type" placeholder="<%= datosCompany.type %>">
+            <input type="text" name="type" value="<%= datosCompany.type %>">
 
             <h3>LOCALIZACIÓN</h3>
             <label for="ciudad">Ciudad: </label>
-            <input type="text" name="ciudad" placeholder="<%= datosCompany.city %>"><br><br>
+            <input type="text" name="ciudad" value="<%= datosCompany.city %>"><br><br>
             <label for="provincia">Provincia</label>
-            <input type="text" name="provincia" placeholder="<%= datosCompany.area %>"><br><br>
+            <input type="text" name="provincia" value="<%= datosCompany.area %>"><br><br>
             <label for="postal">Código postal: </label>
-            <input type="number" name="postal" placeholder="<%= datosCompany.postalCode %>"><br><br>
+            <input type="number" name="postal" value="<%= datosCompany.postalCode %>"><br><br>
             <label for="direccion">Dirección: </label>
-            <input type="text" name="direccion" placeholder="<%= datosCompany.address %>">
+            <input type="text" name="direccion" value="<%= datosCompany.address %>">
 
             <h3>CONTACTO</h3>
             <label for="tel">Teléfono: </label>
-            <input type="tel" name="tel" placeholder="<%=datosCompany.phone%>"><br><br>
+            <input type="tel" name="tel" value="<%=datosCompany.phone%>"><br><br>
             <label for="email">Correo electrónico: </label>
-            <input type="email" name="email" placeholder="<%=datosCompany.email%>">
+            <input type="email" name="email" value="<%=datosCompany.email%>">
 
             <h3>DATOS DE ACTUALIZACIÓN</h3>
             <p>Fecha de creación: <%= datosCompany.createDate %></p>
             <p>Fecha de última actualización: <%= datosCompany.modifiedDate %></p>
             
-            <a href="<%= BaseURL %>company/edit/<%= datosCompany._id %>">Editar</a>
+            <button>Enviar</button><br>
+            <a href="<%= BaseURL %>company">Inicio</a>
         </fieldset>
     </form>
 </body>
