--- a/views/inscription/edit.ejs
+++ b/views/inscription/edit.ejs
@@ -9,9 +9,18 @@
     <h1>Página Edit Inscription</h1>
     <form action="<%= BaseURL %>inscription/<%= inscription._id %>?_method=PATCH" method="POST">
         <input type="text" placeholder="Fecha Inicio" name="FecIni" value="<%= inscription.FecIni %>" required> 
-        <input type="text" placeholder="ID Compañía" name="IdCompany" value="<%= inscription.IdCompany %>" required>        
-        <input type="text" placeholder="ID Usuario" name="IdUser" value="<%= inscription.IdUser %>" required>
-        <input type="text" placeholder="Fecha Fin" name="FecFin" value="<%= inscription.FecFin %>">
+        <select name="IdCompany" required>
+            <option value="">Editar la compañía</option>
+            <% companies.forEach(function(company) { %>
+                <option value="<%= company._id %>"><%= company.name %> - <%= company.cif %></option>
+            <% }); %>
+        </select>        
+        <select name="IdUser" required>
+            <option value="">Editar un usuario</option>
+            <% users.forEach(function(user) { %>
+                <option value="<%= user.idUser %>"><%= user.firstName %> <%= user.lastName %> - <%= user.nif %></option>
+            <% }); %>
+        <input type="date" placeholder="Fecha Fin" name="FecFin" value="<%= inscription.FecFin %>">
         <input type="text" placeholder="Observaciones" name="Observaciones" value="<%= inscription.Observaciones %>">
         <br>
         <br>
