--- a/views/inscription/new.ejs
+++ b/views/inscription/new.ejs
@@ -8,7 +8,11 @@
 <body>
     <h1>Página New Inscription</h1>
     <form action="<%= BaseURL %>inscription" method="POST">
-        <input type="date" placeholder="Fecha Inicio" name="FecIni" required> 
+        <% var fecha = new Date(); %>
+        <%var mes = (fecha.getMonth()+1).toString();%>
+        <%var dia = (fecha.getDate()).toString(); %>
+        <%var anyo = (fecha.getFullYear()).toString(); %>
+        <input type="text" name="FecIni" value=<%= `${anyo}-${mes}-${dia}` %> readonly> 
         <select name="IdCompany" required>
             <option value="">Seleccione una compañía</option>
             <% companies.forEach(function(company) { %>
