eliminado una cosa del formulario delete

--- a/views/inscription/index.ejs
+++ b/views/inscription/index.ejs
@@ -39,7 +39,7 @@
                         <a href="<%= BaseURL %>inscription/edit/<%= inscription._id %>">Editar inscription</a> <!-- Enlace para editar -->
                     </div>
                     <div>
-                        <form action="<%= BaseURL %>inscription/<%= inscription._id %>?_method=DELETE" method="POST" style="display: inline;"> <!-- Formulario para eliminar -->
+                        <form action="<%= BaseURL %>inscription/<%= inscription._id %>?_method=DELETE" method="POST" > <!-- Formulario para eliminar -->
                             <button type="submit">
                                 Eliminar
                             </button>
