--- a/views/company/index.ejs
+++ b/views/company/index.ejs
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMPRESAS</title>
-    <style>
-        fieldset{
-            border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-        }
-    </style>
+    <base href="/">
+    <link rel="stylesheet" href="stylesCompany.css">
 </head>
 <body>
     <h1>EMPRESAS</h1>
-    <a href="<%= BaseURL %>company/new">Nueva empresa</a>
+    <fieldset id="nav">
+        <a href="<%= BaseURL %>company/new">Nueva empresa</a>
+        <a href="<%= BaseURL %>inscription">Inscripciones</a>
+        <a href="<%= BaseURL %>users">Usuarios</a>
+    </fieldset>
+    
     <div id="empresas">
 
     </div>
