--- a/views/company/new.ejs
+++ b/views/company/new.ejs
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        fieldset{
-            border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-        }
-    </style>
+    <base href="/">
+    <link rel="stylesheet" href="stylesCompany.css">
 </head>
 <body>
+    <h1>Nueva Empresa</h1>
+    <fieldset id="nav">
+        <a href="<%= BaseURL %>company">Inicio</a>
+        <a href="<%= BaseURL %>inscription">Inscripciones</a>
+        <a href="<%= BaseURL %>users">Usuarios</a>
+    </fieldset>
     <form action="<%= BaseURL %>company" method="POST">
         <fieldset>
             <legend>Nueva Empresa</legend>
@@ -58,7 +59,7 @@
             <input type="text" name="modifiedDate" value=<%= `${anyo}-${mes}-${dia}` %> readonly>
             
             <button>Enviar</button><br>
-            <a href="<%= BaseURL %>company">Inicio</a>
+            
         </fieldset>
     </form>
 </body>
