--- a/views/inscription/edit.ejs
+++ b/views/inscription/edit.ejs
@@ -4,33 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription</title>
+    <base href="/">
+    <link rel="stylesheet" href="stylesCompany.css">
 </head>
 <body>
     <h1>Página Edit Inscription</h1>
+    <fieldset id="nav">
+        <a href="<%= BaseURL %>inscription/new">Nueva inscription</a>  <!-- Enlace para nueva inscripción -->
+        <a href="<%= BaseURL %>company">Empresas</a>
+        <a href="<%= BaseURL %>users">Usuarios</a>
+    </fieldset><br>
     <form action="<%= BaseURL %>inscription/<%= inscription._id %>?_method=PATCH" method="POST">
-        <input type="text" placeholder="Fecha Inicio" name="FecIni" value="<%= inscription.FecIni %>" required> 
-        <select name="IdCompany" required>
-            <option value="">Editar la compañía</option>
-            <% companies.forEach(function(company) { %>
-                <option value="<%= company._id %>"><%= company.name %> - <%= company.cif %></option>
-            <% }); %>
-        </select>        
-        <select name="IdUser" required>
-            <option value="">Editar un usuario</option>
-            <% users.forEach(function(user) { %>
-                <option value="<%= user.idUser %>"><%= user.firstName %> <%= user.lastName %> - <%= user.nif %></option>
-            <% }); %>
-        <input type="date" placeholder="Fecha Fin" name="FecFin" value="<%= inscription.FecFin %>">
-        <input type="text" placeholder="Observaciones" name="Observaciones" value="<%= inscription.Observaciones %>">
-        <br>
-        <br>
-        <br>
-        <label></label>
-        <br>
-        <br>
-        <br>
-        <button>Guardar</button>
+        <fieldset>
+            <input type="text" placeholder="Fecha Inicio" name="FecIni" value="<%= inscription.FecIni %>" required> 
+            <select name="IdCompany" required>
+                <option value="">Editar la compañía</option>
+                <% companies.forEach(function(company) { %>
+                    <option value="<%= company._id %>"><%= company.name %> - <%= company.cif %></option>
+                <% }); %>
+            </select>        
+            <select name="IdUser" required>
+                <option value="">Editar un usuario</option>
+                <% users.forEach(function(user) { %>
+                    <option value="<%= user.idUser %>"><%= user.firstName %> <%= user.lastName %> - <%= user.nif %></option>
+                <% }); %>
+            <input type="date" placeholder="Fecha Fin" name="FecFin" value="<%= inscription.FecFin %>">
+            <input type="text" placeholder="Observaciones" name="Observaciones" value="<%= inscription.Observaciones %>">
+            <button>Guardar</button>
+        </fieldset>
     </form>
-    <a href="<%= BaseURL %>inscription/">Volver atrás</a>
 </body>
 </html>
