--- a/views/inscription/new.ejs
+++ b/views/inscription/new.ejs
@@ -4,33 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription</title>
+    <base href="/">
+    <link rel="stylesheet" href="stylesCompany.css">
 </head>
 <body>
     <h1>Página New Inscription</h1>
+    <fieldset id="nav">
+        <a href="<%= BaseURL %>inscription/new">Nueva inscription</a>  <!-- Enlace para nueva inscripción -->
+        <a href="<%= BaseURL %>company">Empresas</a>
+        <a href="<%= BaseURL %>users">Usuarios</a>
+    </fieldset><br>
     <form action="<%= BaseURL %>inscription" method="POST">
-        <% var fecha = new Date(); %>
-        <%var mes = (fecha.getMonth()+1).toString();%>
-        <%var dia = (fecha.getDate()).toString(); %>
-        <%var anyo = (fecha.getFullYear()).toString(); %>
-        <input type="text" name="FecIni" value=<%= `${anyo}-${mes}-${dia}` %> readonly>
-        <select name="IdCompany" required>
-            <option value="">Seleccione una compañía</option>
-            <% companies.forEach(function(company) { %>
-                <option value="<%= company._id %>"><%= company.name %> - <%= company.cif %></option>
-            <% }); %>
-        </select>        
-        <select name="IdUser" required>
-            <option value="">Seleccione un usuario</option>
-            <% users.forEach(function(user) { %>
-                <option value="<%= user.idUser %>"><%= user.firstName %> <%= user.lastName %> - <%= user.nif %></option>
-            <% }); %>
-        </select>
-        <input type="date" placeholder="Fecha Fin" name="FecFin">
-        <input type="text" placeholder="Observaciones" name="Observaciones">        
-        <br>
-        <br>
-        <button>Guardar</button>
+        <fieldset>
+            <% var fecha = new Date(); %>
+            <%var mes = (fecha.getMonth()+1).toString();%>
+            <%var dia = (fecha.getDate()).toString(); %>
+            <%var anyo = (fecha.getFullYear()).toString(); %>
+            <input type="text" name="FecIni" value=<%= `${anyo}-${mes}-${dia}` %> readonly>
+            <select name="IdCompany" required>
+                <option value="">Seleccione una compañía</option>
+                <% companies.forEach(function(company) { %>
+                    <option value="<%= company._id %>"><%= company.name %> - <%= company.cif %></option>
+                <% }); %>
+            </select>        
+            <select name="IdUser" required>
+                <option value="">Seleccione un usuario</option>
+                <% users.forEach(function(user) { %>
+                    <option value="<%= user.idUser %>"><%= user.firstName %> <%= user.lastName %> - <%= user.nif %></option>
+                <% }); %>
+            </select>
+            <input type="date" placeholder="Fecha Fin" name="FecFin">
+            <input type="text" placeholder="Observaciones" name="Observaciones">        
+            <br>
+            <br>
+            <button>Guardar</button>
+        </fieldset>
     </form>
-    <a href="<%= BaseURL %>inscription/">Volver atrás</a>
 </body>
 </html>
